tests/errors/semantic/blocking/TYPE_ALIAS_REASSIGN.py
from typing import TypeAlias

MyType : TypeAlias = int

MyType = float
